--- a/View/MainWindow.xaml
+++ b/View/MainWindow.xaml
@@ -50,12 +50,14 @@
                     Margin="5,0,0,5" 
                     Width="430">
             <Button Content="Отмена"
+                    IsEnabled="{Binding CancelIsEnabled}"
                     Height="25"
                     Command="{Binding CancelCommand}"
                     Margin="340,0,0,0"
                     VerticalAlignment="Center"
                     Width="80"/>
             <Button Content="ОК"
+                    IsEnabled="{Binding OkIsEnabled}"
                     Command="{Binding OKCommand}"
                     Height="25"
                     Margin="-250,0,0,0"
@@ -63,7 +65,9 @@
                     Width="80"/>
         </StackPanel>
         <Expander HorizontalAlignment="Left" 
-                  Height="100" Margin="244,0,0,0"
+                  ExpandDirection="Right"
+                  IsEnabled="{Binding AuthorSelectionIsEnabled}"
+                  Height="100" Margin="419,0,-177,0"
                   IsExpanded="False"
                   VerticalAlignment="Top" 
                   Width="200">
@@ -75,6 +79,8 @@
             </ListBox>
         </Expander>
         <Expander HorizontalAlignment="Left" 
+                  ExpandDirection="Right"
+                  IsEnabled="{Binding CommentSelectionIsEnabled}"
                   Height="100" 
                   Margin="96,45,0,0" 
                   VerticalAlignment="Top" 
