--- a/View/MainWindow.xaml
+++ b/View/MainWindow.xaml
@@ -94,8 +94,8 @@
                   VerticalAlignment="Top" 
                   Width="259">
             <ListBox HorizontalAlignment="Left" 
-                     Height="85" 
-                     Width="259" Margin="0,0,-2,0"/>
+                     Height="59" 
+                     Width="249"/>
         </Expander>
         <Expander Grid.Column="0"
                   IsExpanded="False"
@@ -105,7 +105,7 @@
                   Margin="97,0,0,0" 
                   VerticalAlignment="Top" 
                   Width="295">
-            <Grid Background="#FFE5E5E5"/>
+            <ListBox HorizontalAlignment="Left" Height="100" Width="285"/>
         </Expander>
     </Grid>
 </Window>
