--- a/View/StartWindow.xaml
+++ b/View/StartWindow.xaml
@@ -3,26 +3,29 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:NS_Comment.View"
+        xmlns:local="clr-namespace:NS_Comment.View" xmlns:vm="clr-namespace:NS_Comment"
         mc:Ignorable="d"
         Title="StartWindow" Height="450" Width="800">
+    <Window.DataContext>
+        <vm:MainViewModel/>
+    </Window.DataContext>
     <Grid>
         <Button Content="NEW" 
-                Click="NewMode"
+                Command="{Binding CreateNewUserCommand}"
                 HorizontalAlignment="Left" 
                 Margin="279,32,0,0" 
                 VerticalAlignment="Top" 
                 Width="199" 
                 Height="53"/>
         <Button Content="EDIT" 
-                Click="EditMode"
+                Command="{Binding EditUserInfoCommand}"
                 HorizontalAlignment="Left" 
                 Margin="279,119,0,0"
                 VerticalAlignment="Top"
                 Width="199"
                 Height="53"/>
         <Button Content="READ" 
-                Click="ReadMode"
+                Command="{Binding ReadUserInfoCommand}"
                 HorizontalAlignment="Left" 
                 Margin="279,213,0,0" 
                 VerticalAlignment="Top" 
