--- a/View/MainWindow.xaml
+++ b/View/MainWindow.xaml
@@ -7,9 +7,10 @@
         xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
         mc:Ignorable="d"
         MaxHeight="400" MaxWidth="600"
-        MinHeight="250" MinWidth="450"
+        MinHeight="400" MinWidth="600"
+        SizeToContent="WidthAndHeight"
         WindowStartupLocation="CenterScreen"
-        Title="MainWindow" Height="250" Width="450">
+        Title="MainWindow">
     <Window.DataContext>
         <vm:MainViewModel/>
     </Window.DataContext>
@@ -20,6 +21,7 @@
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="0.1*"/>
             <ColumnDefinition Width="0.1*"/>
         </Grid.ColumnDefinitions>
         <StackPanel HorizontalAlignment="Left" 
@@ -70,18 +72,17 @@
                     VerticalAlignment="Bottom"
                     Height="30" 
                     FlowDirection="LeftToRight"
-                    Orientation="Horizontal"
-                    Margin="-20,0,0,0" 
-                    Width="430">
+                    Orientation="Horizontal" 
+                    Width="592" Grid.ColumnSpan="3">
             <Button Content="Отмена"
                     IsCancel="True"
-                    Height="25"
+                    Height="26"
                     Command="{Binding CancelCommand}"
-                    Margin="330,0,0,0"
+                    Margin="330,2,0,2"
                     VerticalAlignment="Center"
                     Width="80"/>
             <Button Content="ОК"
-                    IsEnabled="{Binding OkIsEnabled,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
+                    IsEnabled="{Binding OkIsEnabled, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                     IsDefault="True"
                     Command="{Binding OKCommand}"
                     Height="25"
@@ -120,8 +121,8 @@
             <ListBox HorizontalAlignment="Left" 
                      SelectedIndex ="{Binding Index, Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
                      ItemsSource="{Binding UserComments, Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
-                     Height="100" 
-                     Width="285">
+                     Height="103" 
+                     Width="295" Margin="0,0,-2,0">
                 <i:Interaction.Triggers>
                     <i:EventTrigger EventName="MouseDoubleClick">
                         <i:InvokeCommandAction Command="{Binding CommentSelectCommand}"/>
