--- a/View/StartWindow.xaml
+++ b/View/StartWindow.xaml
@@ -3,12 +3,9 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:NS_Comment" xmlns:vm="clr-namespace:NS_Comment"
+        xmlns:local="clr-namespace:NS_Comment"
         mc:Ignorable="d"
         Title="StartWindow" Height="450" Width="800">
-    <Window.DataContext>
-        <vm:MainViewModel/>
-    </Window.DataContext>
     <Grid>
         <Button Content="NEW" 
                 Command="{Binding CreateNewUserCommand}"
