--- a/App.xaml
+++ b/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:NS_Comment"
-             StartupUri="View/CommentWindow.xaml">
+             StartupUri="View/StartWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
