--- a/View/CommentWindow.xaml
+++ b/View/CommentWindow.xaml
@@ -36,6 +36,7 @@
                HorizontalContentAlignment="Left"
                FontSize="12" VerticalAlignment="Top" Height="25" Width="123"/>
             <TextBox Height="20" TextWrapping="Wrap"
+                     TextChanged="AuthorBoxTextChanged"
                      Grid.Row="0"
                      Grid.Column="0"
                      Text="{Binding AuthorName, Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
@@ -97,6 +98,7 @@
                Height="25" 
                Width="123"/>
             <TextBox Height="100" 
+                     TextChanged="CommentBoxTextChanged"
                  TextWrapping="Wrap"
                  AcceptsReturn="True"
                  Grid.Row="1"
@@ -116,6 +118,7 @@
                     Width="772" 
                     Grid.ColumnSpan="3">
             <Button Content="ОК"
+                    Name="OkButton"
                     IsEnabled="{Binding OkIsEnabled, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                     IsDefault="True"
                     Command="{Binding OKCommand}"
