--- a/View/StartWindow.xaml
+++ b/View/StartWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:NS_Comment"
         mc:Ignorable="d"
+        WindowStartupLocation="CenterScreen"
         Title="StartWindow" Height="450" Width="800">
     <Grid>
         <Button Content="NEW"
