--- a/View/CommentWindow.xaml
+++ b/View/CommentWindow.xaml
@@ -18,8 +18,8 @@
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="0.3*"/>
-            <ColumnDefinition Width="0.3*"/>
+            <ColumnDefinition Width="150"/>
+            <ColumnDefinition Width="150"/>
         </Grid.ColumnDefinitions>
         <StackPanel HorizontalAlignment="Left" 
                     Height="165" 
